--- a/index.html
+++ b/index.html
@@ -60,4 +60,155 @@
     width:260px; height:230px;
     background:#fff0f5;
     clip-path: path("M130 230 C 130 200, 40 150, 40 90 A 45 45 0 0 1 130 90 A 45 45 0 0 1 220 90 C 220 150, 130 200, 130 230 Z");
-    border:2
+    border:2px solid rgba(212,175,55,.6);
+    box-shadow:0 14px 40px rgba(0,0,0,.15);
+    display:flex; align-items:center; justify-content:center;
+    padding:20px;
+    text-align:center;
+    opacity:0;
+    transition: opacity .6s ease, transform .6s ease;
+  }
+  .note.show{ opacity:1; transform: translate(-50%, 0) scale(1); }
+  .note p{ margin:0; font-size:clamp(14px,2.4vw,18px); color:#8b1e3f; font-weight:600; }
+
+  /* Konfetti */
+  .confetti{ position:absolute; inset:0; pointer-events:none; overflow:hidden }
+  .piece{
+    position:absolute; width:7px; height:12px; border-radius:2px;
+    opacity:.95;
+    animation: fall 2.8s linear forwards;
+  }
+  @keyframes fall{
+    to{ transform: translateY(115vh) rotate(520deg); opacity:0; }
+  }
+
+  /* Sol */
+  .sun{
+    position:absolute; top:10%; left:50%; transform:translateX(-50%);
+    width:160px; height:160px; border-radius:50%;
+    background: radial-gradient(circle at 40% 40%, #ffe8a8 0%, #ffd166 55%, #ffc04d 100%);
+    box-shadow:0 0 60px 18px #ffe9a6;
+  }
+
+  /* Reset-knapp */
+  .ctrl{
+    position:absolute; top:10px; right:10px;
+    width:34px; height:34px; border-radius:50%;
+    background:#1f2a44; color:#fff; display:grid; place-items:center;
+    font-weight:700; font-size:13px;
+    opacity:.75; cursor:pointer; user-select:none;
+    box-shadow:0 10px 20px rgba(31,42,68,.25);
+  }
+  .ctrl:hover{ opacity:1 }
+  .ctrl:active{ transform: translateY(1px) }
+</style>
+</head>
+<body>
+  <div class="frame" id="frame" aria-label="Bouquet card">
+    <div class="ground"></div>
+    <div class="sun"></div>
+    <div class="ctrl" id="reset" title="Reset">↺</div>
+
+    <!-- Hjärtformat meddelande -->
+    <div class="note" id="note">
+      <p><em>Nobody or nothing will ever come between us</em></p>
+    </div>
+
+    <div class="confetti" id="confetti"></div>
+
+    <!-- Bukett -->
+    <svg viewBox="0 0 1000 560" role="img" aria-label="Bouquet">
+      <g class="bouquet">
+        <path class="stem" d="M290,520 C315,440 345,380 380,330"/>
+        <path class="stem" d="M450,520 C470,440 505,380 545,330"/>
+        <path class="stem" d="M610,520 C625,445 655,390 695,345"/>
+        <ellipse class="leaf" cx="360" cy="395" rx="28" ry="14" transform="rotate(-28 360 395)"/>
+        <ellipse class="leaf" cx="515" cy="405" rx="28" ry="14" transform="rotate(15 515 405)"/>
+        <ellipse class="leaf" cx="660" cy="380" rx="26" ry="13" transform="rotate(-12 660 380)"/>
+        <g transform="translate(380,310)">
+          <g class="petal" fill="var(--p1)">
+            <circle cx="0" cy="-40" r="24"/>
+            <circle cx="32" cy="-8" r="24"/>
+            <circle cx="-32" cy="-8" r="24"/>
+            <circle cx="20" cy="28" r="24"/>
+            <circle cx="-20" cy="28" r="24"/>
+          </g><circle class="center" r="16" fill="var(--center)"/>
+        </g>
+        <g transform="translate(545,320)">
+          <g class="petal" fill="var(--p2)">
+            <circle cx="0" cy="-44" r="26"/>
+            <circle cx="34" cy="-10" r="26"/>
+            <circle cx="-34" cy="-10" r="26"/>
+            <circle cx="22" cy="30" r="26"/>
+            <circle cx="-22" cy="30" r="26"/>
+          </g><circle class="center" r="18" fill="var(--center)"/>
+        </g>
+        <g transform="translate(695,335)">
+          <g class="petal" fill="var(--p3)">
+            <circle cx="0" cy="-38" r="22"/>
+            <circle cx="28" cy="-6" r="22"/>
+            <circle cx="-28" cy="-6" r="22"/>
+            <circle cx="18" cy="26" r="22"/>
+            <circle cx="-18" cy="26" r="22"/>
+          </g><circle class="center" r="16" fill="var(--center)"/>
+        </g>
+        <g transform="translate(470,360)">
+          <g class="petal" fill="var(--p4)">
+            <circle cx="0" cy="-20" r="12"/>
+            <circle cx="18" cy="0" r="12"/>
+            <circle cx="-18" cy="0" r="12"/>
+            <circle cx="0" cy="20" r="12"/>
+          </g><circle class="center" r="8" fill="var(--center)"/>
+        </g>
+      </g>
+    </svg>
+  </div>
+
+<script>
+  const frame = document.getElementById('frame');
+  const confetti = document.getElementById('confetti');
+  const note = document.getElementById('note');
+  const resetBtn = document.getElementById('reset');
+  let shown = false;
+
+  function makeConfetti(n=80){
+    const colors = ['#c9d7ff','#ffd9e3','#ffe8b0','#d7f1e5','#3d9b72','#2c7a5b'];
+    for(let i=0;i<n;i++){
+      const el = document.createElement('div');
+      el.className = 'piece';
+      el.style.left = Math.random()*100 + 'vw';
+      el.style.top = '-8vh';
+      el.style.background = colors[Math.floor(Math.random()*colors.length)];
+      el.style.transform = `translateY(0) rotate(${Math.random()*180}deg)`;
+      el.style.animationDelay = (Math.random()*0.7)+'s';
+      confetti.appendChild(el);
+      setTimeout(()=>el.remove(), 3000);
+    }
+  }
+
+  function reveal(){
+    if(!shown){
+      note.classList.add('show');
+      makeConfetti();
+      shown = true;
+    } else {
+      makeConfetti();
+    }
+  }
+
+  function resetAll(){
+    note.classList.remove('show');
+    shown = false;
+  }
+
+  frame.addEventListener('click', reveal);
+  resetBtn.addEventListener('click', (e)=>{ e.stopPropagation(); resetAll(); });
+
+  frame.tabIndex = 0;
+  frame.addEventListener('keydown', (e)=>{
+    if(e.key === 'Enter' || e.key === ' '){ e.preventDefault(); reveal(); }
+    if(e.key.toLowerCase() === 'r'){ resetAll(); }
+  });
+</script>
+</body>
+</html>
