--- a/index.html
+++ b/index.html
@@ -53,23 +53,29 @@
   }
   .bouquet{ animation: sway 4s ease-in-out infinite; transform-origin: 50% 80%; }
 
-  /* Hjärtformat meddelande */
-  .note{
-    position:absolute; left:50%; top:14%;
-    transform: translate(-50%, -10px) scale(.98);
-    width:300px; height:270px;
-    background:#fff0f5;
-    clip-path: path("M130 230 C 130 200, 40 150, 40 90 A 45 45 0 0 1 130 90 A 45 45 0 0 1 220 90 C 220 150, 130 200, 130 230 Z");
-    border:2px solid rgba(212,175,55,.6);
-    box-shadow:0 14px 40px rgba(0,0,0,.15);
-    display:flex; align-items:center; justify-content:center;
-    padding:20px;
-    text-align:center;
-    opacity:0;
-    transition: opacity .6s ease, transform .6s ease;
-  }
-  .note.show{ opacity:1; transform: translate(-50%, 0) scale(1); }
-  .note p{ margin:0; font-size:clamp(10px,2.6vw,12px); color:#8b1e3f; font-weight:600; }
+/* Hjärtformat meddelande */
+.note{
+  position:absolute; left:50%; top:14%;
+  transform: translate(-50%, -10px) scale(.98);
+  width:320px; height:280px;   /* större hjärta */
+  background:#fff0f5;
+  clip-path: path("M160 280 C 160 240, 50 180, 50 110 A 55 55 0 0 1 160 110 A 55 55 0 0 1 270 110 C 270 180, 160 240, 160 280 Z");
+  border:2px solid rgba(212,175,55,.6);
+  box-shadow:0 14px 40px rgba(0,0,0,.15);
+  display:flex; align-items:center; justify-content:center;
+  padding:20px;
+  text-align:center;
+  opacity:0;
+  transition: opacity .6s ease, transform .6s ease;
+}
+.note.show{ opacity:1; transform: translate(-50%, 0) scale(1); }
+.note p{
+  margin:0;
+  font-size:clamp(12px, 1.8vw, 18px); /* anpassar sig men max 18px */
+  color:#8b1e3f;
+  font-weight:600;
+  line-height:1.3; /* bättre radavstånd */
+}
 
   /* Konfetti */
   .confetti{ position:absolute; inset:0; pointer-events:none; overflow:hidden }
