--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
     <div class="ctrl" id="reset" title="Reset">↺</div>
 
     <!-- Hjärtformat meddelande -->
-    <div class="note" id="note">
-      <p><em>Nobody or nothing will ever come between us</em></p>
-    </div>
+<div class="note" id="note">
+  <p><em>Nobody or nothing<br/>will ever come between us</em></p>
+</div>
+
 
     <div class="confetti" id="confetti"></div>
 
