--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
   color:#8b1e3f;
   font-weight:600;
   line-height:1.4;
+  position: relative;
+  left: -6px; /* 🔑 flyttar allt lite åt vänster */
 }
+
 .note p .highlight{
   display:block;
   font-size:clamp(20px, 3vw, 28px); /* större text på sista raden */
